Add Tinkerpop filters to query and explore blueprints graphs
Signed-off-by: Xia Zhu <xia.zhu@intel.com>