@@ -1,49 +1,34 @@
-# Gephi - The Open Graph Viz Platform
+# Gephi-Tinkerpop:  Query and Visualize Blueprints Graphs in Gephi
 
-[Gephi](http://gephi.org) is an award-winning open-source platform for visualizing and manipulating large graphs. It runs on Windows, Mac OS X and Linux. Localization is available in French, Spanish, Japanese, Russian, Brazilian Portuguese, Chinese and Czech.
+## Introduction
 
-- **Fast** Powered by a built-in OpenGL engine, Gephi is able to push the envelope with very large networks. Visualize networks up to a million elements. All actions (e.g. layout, filter, drag) run in real-time.
+[Gephi](http://gephi.org) is an award-winning open-source platform for visualizing and 
+manipulating large graphs. It is powered by a built-in OpenGL engine, 
+and with modular design. It is easy to install and 
+get started.
 
-- **Simple** Easy to install and [get started](http://gephi.org/users/quick-start/). An UI that is centered around the visualization. Like Photoshop™ for graphs.
+[Tinkerpop](http://www.tinkerpopbook.com/) is an open-source stack for the emerging graph 
+landscape. Its [Blueprints API](http://blueprints.tinkerpop.com/) is a property graph model and 
+the foundation of the stack. Its [Rexster](http://rexster.tinkerpop.com/) is a multi-faceted graph server that exposes any
+ Blueprints graph through several mechanisms with a general focus on REST. [Many graph databases](http://en.wikipedia.org/wiki/Graph_database)
+ supports blueprints API, for example, [Neo4j](http://www.neo4j.org), 
+ [Titan](http://thinkaurelius.github.io/titan/), 
+ [OrientDB](http://www.orientechnologies.com/orientdb),
+ [InfinityGraph](http://infinitegraph.com/),
+ [DEX](http://www.sparsity-technologies.com/dex) etc.
+ 
+[Gephi-Tinkerpop](https://github.com/xiazhu/gephi-tinkerpop) builds a bridge between these two 
+excellent open-source projects. It enables users to query Blueprints graphs created by any graph 
+databases, either remotely or from the same machine, via Rexster REST API, 
+and explore/visualize the queried graphs or subgraphs in Gephi. 
 
-- **Modular** Extend Gephi with [plug-ins](http://gephi.org/plugins/). The architecture is built on top of Netbeans Platform and can be extended or reused easily through well-written APIs.
+[Gephi-Tinkerpop](https://github.com/xiazhu/gephi-tinkerpop) enables users to query Blueprints 
+graphs via [Gremlin](http://gremlindocs.com/). It currently supports vertex-oriented Gremlin 
+queries, edge-oriented Gremlin queries, and Ego network query.
+ 
 
-[Download Gephi](http://gephi.org/users/download/) for Windows, Mac OS X and Linux and consult the [release notes](https://wiki.gephi.org/index.php/Gephi_Releases). Example datasets can be found on our [wiki](https://wiki.gephi.org/index.php?title=Datasets).
-
-![Gephi](http://gephi.org/wp-content/themes/gephi/images/screenshots/select-tool-mini.png)
-
-## Install and use Gephi
-
-Download and [Install](http://gephi.org/users/install) Gephi on your computer. 
-
-Get started with the [Quick Start](http://gephi.org/users/quick-start/) and follow the [Tutorials](http://gephi.org/users/). Load a sample [dataset](https://wiki.gephi.org/index.php?title=Datasets) and start to play with the data.
-
-If you run into any trouble or have questions consult our [forum](http://forum.gephi.org).
-
-## Latest releases
-
-### Stable
-
-- Latest stable release on [gephi.org](http://gephi.org/download).
-
-### Nightly builds
-
-Current version is 0.8.2-SNAPSHOT
-
-- [gephi-0.8.2-SNAPSHOT.zip](http://nexus.gephi.org/nexus/service/local/artifact/maven/content?r=snapshots&g=org.gephi&a=gephi&v=0.8.2-SNAPSHOT&p=zip) (Windows & Linux)
-
-- [gephi-0.8.2-SNAPSHOT.dmg](http://nexus.gephi.org/nexus/service/local/artifact/maven/content?r=snapshots&g=org.gephi&a=gephi&v=0.8.2-SNAPSHOT&p=dmg) (Mac OS X)
-
-- [gephi-0.8.2-SNAPSHOT-sources.tar.gz](http://nexus.gephi.org/nexus/service/local/artifact/maven/redirect?r=snapshots&g=org.gephi&a=gephi-parent&v=0.8.2-SNAPSHOT&c=sources&p=tar.gz) (Sources)
-
-- [gephi-0.8.2-SNAPSHOT-javadoc.jar](http://nexus.gephi.org/nexus/service/local/artifact/maven/redirect?r=snapshots&g=org.gephi&a=gephi-parent&v=0.8.2-SNAPSHOT&c=javadoc&p=jar) (Javadoc)
-
-## Developer Introduction
-
-Gephi is developed in Java and uses OpenGL for its visualization engine. Built on the top of Netbeans Platform, it follows a loosely-coupled, modular architecture philosophy. That allows it to be used build large applications and to grow in a sustainable way. Gephi is split into modules, which depend on other modules through well-written APIs. Plugins can reuse existing APIs, create new services and even replace a default implementation with a new one.
-
-Consult the [**Javadoc**](http://gephi.org/docs) for an overview of the APIs.
-
+## Install and run Gephi-Tinkerpop
+                                                                                                                    
 ### Requirements
 
 - Java JDK 6 or 7 with preferably [Oracle Java JDK](http://java.com/en/).
@@ -52,44 +37,220 @@ Consult the [**Javadoc**](http://gephi.org/docs) for an overview of the APIs.
 
 ### Checkout and Build the sources
 
-- Fork the repository and clone
+- Get a copy of source code by git clone
 
-        git clone git@github.com:username/gephi.git
+        git clone git@github.com:username/gephi-tinkerpop.git
 
-- Run the following command or [open the project in Netbeans](http://wiki.gephi.org/index.php/Build_Gephi)
+- Build
 
-        mvn clean install
+        mvn clean install -DskipTests --also-make --projects modules/application
 
-- Once built, one can test running Gephi
+- Once built, the binary is ready for run
 
-		cd modules/application
-		mvn nbm:cluster-app nbm:run-platform
+		The directory $GEPHI_TAARGET=$GEPHI_TINKERPOP_SRC_HOME/modules/application/target/gephi
+		 is the build target. 
 
-### Create Plug-ins
+- Configure Gephi-Tinkerpop
 
-Gephi is extensible and lets users create plug-ins to add new features, or to modify existing features. For example, you can create a new layout algorithm, add a metric, create a filter or a tool, support a new file format or database, or modify the visualization.
+        Gephi-Tinkerpop expects users to write configuration file $GEPHI_TARGET/etc/gephi-tinkerpop.json
+        So, before running Gephi-Tinkerpop, please edit the file to tell Gephi-Tinkerpop the IP 
+        and port number of the Tinkerpop Rexster server, as well as the names of graphs serving 
+        by the Rexster server, in [JSON](http://www.json.org) format. 
+        
+        An example of Gephi-Tinkerpop is as follows:
+        
+        
+        {
+         "base-uri":"http://fake.fake.fake.com",
+         "server-port":"8182",
+         "graphs":["newLBP", "MovieLens", "TitanGods"]
+        }
 
-- [**Plugins Portal**](http://wiki.gephi.org/index.php/Plugins_portal)
+- Run Gephi-Tinkerpop
 
-- [Plugins Quick Start (5 minutes)](http://wiki.gephi.org/index.php/Plugin_Quick_Start_(5_minutes))
+        At Linux, you can start to use Gephi-Tinkerpop simply by the following command: 
+		bin/gephi          
 
-- Browse the [plugins](http://gephi.org/plugins) created by the community
+- Default Gephi configuration. 
+		Since Gephi-Tinkerpop is based on Gephi project. Sometimes you may also want to configure 
+		Gephi itself. 
+		By default, the Gephi configuration file is at $GEPHI_TINKERPOP_SRC_HOME/modules/application/gephi/etc/gephi.conf 		
+		An example Gephi configuration file is as follows:
+		
+		# ${HOME} will be replaced by user home directory according to platform
+        default_userdir="${HOME}/.${APPNAME}/0.8.2-SNAPSHOT/dev"
+        default_mac_userdir="${HOME}/Library/Application Support/${APPNAME}/0.8.2-SNAPSHOT/dev"
+        
+        # options used by the launcher by default, can be overridden by explicit
+        # command line switches
+        default_options="--branding gephi -J-Xms64m -J-Xmx8192m -J-Xverify:none -J-Dsun.java2d
+        .noddraw=true -J-Dsun.awt.noerasebackground=true -J-Dnetbeans.indexing.noFileRefresh=true -J-Dplugin.manager.check.interval=EVERY_DAY"
+        # for development purposes you may wish to append: -J-Dnetbeans.logger.console=true -J-ea
+        
+        # default location of JDK/JRE, can be overridden by using --jdkhome <dir> switch
+        #jdkhome="/path/to/jdk"
+        
+        # clusters' paths separated by path.separator (semicolon on Windows, colon on Unices)
+        #extra_clusters=
+		
+- Change Gephi configuration when needed.	
+	
+		"default_userdir" is where Gephi runtime configuration and log file are saved.  The log	file is at $default_useridr/var/log/message.log  
+		So, if you want to re-direct the log file to different location, please edit "default_userdir". 
+		
+		"default_options" is the JVM configurations. You can enlarge "-J-Xmx" when visualizing large graphs. 
 
-- We've created a [**Plugins Bootcamp**](https://github.com/gephi/gephi-plugins-bootcamp) to learn by examples.
+## Gephi-Tinkerpop Tutorial
 
-## Gephi Toolkit
+### Connect to Graph Database
+Before submitting queries to Tinkerpop Rexster server. The first step is to edit the 
+    configuration file $GEPHI_TARGET/etc/gephi-tinkerpop.json as mentioned in above section. The 
+    second step is to select graph from configuration panel. Please see below video on how to do 
+    the second step.
+    
+    [![Connect to Graph Database](http://img.youtube.com/vi/Jz0t7wue5qc/0.jpg)](https://www.youtube.com/watch?v=Jz0t7wue5qc)
+   
+### Vertex-Oriented Query
+Vertex-Oriented Query are for users to submit abitraty/customerized Vertex related queries. There are three parameters for Vertex-Oriented Queries. 
+    
+- Gremlin Script:
 
-The Gephi Toolkit project packages essential Gephi modules (Graph, Layout, Filters, IO…) in a standard Java library which any Java project can use for getting things done. It can be used on a server or command-line tool to do the same things Gephi does but automatically.
+      Users can write their customerized [Gremlin](http://gremlindocs.com) script. For 
+      Vertex-Oriented Queries, we expect the results of the Gremlin script are set of vertices. 
+      Some examples are:
+      
+      
+       "g.V[0..9]" is to find the first 10 vertices.
+       
+       "g.V.filter{it.title=="Toy Story (1995)"}.inE.filter{it.rating > 3}.outV.outE.filter{it
+       .rating > 3}.inV[0..99]"
+         is to find for users who related "Toy Story (1995)" as score 3, 
+         what are other movies they also rated as score 3, and output the first 100 such movies.
+         
+- WithSubgraph:
 
-- [Download](http://gephi.org/toolkit/)
+      When it is checked, the edges among the resulting vertices will also be queried and shown 
+      in Gephi GUI.
 
-- [GitHub Project](https://github.com/gephi/gephi-toolkit)
+- NewImport:
+    
+      When it is checked, it means the query results become the base graph in Gephi.
+      
+         
+    Please see below video on how to submit Vertex-Oriented Query. The Gremlin Query in the 
+    example is to get the first 500 vertices from a graph named "MovieLens".   
+ 
+    [![Connect to Graph Database](http://img.youtube.com/vi/juRIJxBAXVI/0.jpg)](https://www.youtube.com/watch?v=juRIJxBAXVI)
+   
+### Edge-Oriented Query
+   Edge-Oriented Query are for users to submit abitraty/customerized Edge related queries. There 
+   are two parameters for Vertex-Oriented Queries. 
+    
+- Gremlin Script:
 
-- [Toolkit Portal](https://wiki.gephi.org/index.php/Toolkit_portal)
+      Users can write their customerized [Gremlin](http://gremlindocs.com) script. For 
+      Edge-Oriented Queries, we expect the results of the Gremlin script are set of edges. 
+      Some examples are:
+      
+      
+       "g.E[0..99]" is to find the first 100 edges.
+       
+       "g.E.filter{it.rating==3}.dedup[0..1999]"
+         is to find for the edges with rating/score 3, and output the first 2000 such edges.
+         
+- NewImport:
+    
+      When it is checked, it means the query results become the base graph in Gephi.
+      
+             
+    Please see below video on how to submit Edge-Oriented Query. The Gremlin Query in the 
+    example is to get the 1000 edges with index in range of [1..1000] from a graph named 
+    "MovieLens".
+    
+    [![Connect to Graph Database](http://img.youtube.com/vi/7a8wMweMq3I/0.jpg)](https://www.youtube.com/watch?v=7a8wMweMq3I)
+ 
+### Ego-Network Query
+   Ego-Network Query is to firstly find a user interested vertex, 
+    and then get teh Ego Network of this vertex. There are seven parameters for 
+    Vertex-Oriented Queries. 
+     
+- Attribute Key:
+ 
+    Expect users to input a string which is the name of a Vertex Attribute/Property. For example, if a user want to get a vertex based on its title, "title" should be entered.
+          
+- Attribute Value:
+     
+    Expect users to input value to the Attribute Key to find the interested vertex.For example, if a user want to find a movie with title "Toy Story (1995)", then "Toy Story (1995)" should be entered for Attribute Value field.
+      
+- Depth:
+     
+    How many level of Ego Network to show. Supported level is 1 to 5.
+       
+- Vertex Distribution:
+     
+    What is the maximum percentage of vertices to show in each level. By default, equal percentage will be shown for each level. Users can edit this field to customize the vertex distribution.
+    
+    Expect comma separate list of percentage numbers, one for each level, and the sum of them should be 100.   
+
+- Max Number Vertices:
+
+    What is the maximum number of vertices to show. The resulting number of vertices can be smaller than the configured number, depending on how many vertices are available on each level. 
+         
+- WithSelf:    
+   Whether to include the interested Vertex which was identifed by Attribute Key and Attribute Value.
+
+- NewImport:    
+   When it is checked, it means the query results become the base graph in Gephi.
+      
+         
+              
+     Please see below video on how to submit Ego Network Query. The example is to firstly find a 
+     movie with title "Toy Story (1995)", and then find the three level Ego Network centered on 
+     this vertex. The maximum number of vertices to show is 3600, with 33%, 33%, 
+     and 34% of vertices shown at level 1 to 3, respectively.
+     
+     [![Connect to Graph Database](http://img.youtube.com/vi/At7vDTUFFW0/0.jpg)](https://www.youtube.com/watch?v=At7vDTUFFW0)
+  
+### Nested Queries
+  
+  Users can also submit nested queries by draging a new query to the location of "Drag subfilter 
+  here" of an existing Query. The nested queries will be executed from the leaf of the query 
+  tree, and going to upper level of the tree step by step. When nested queries are used, 
+  it is implied that the query at the leaf is "NewImport", while queries on non-leaf location are
+   based on existing queries. In this case, users have to guarantee the "NewImport" is correctly 
+   set for each level. The internal software will automatically set it correctly.
+   
+   Please see below video on how to submit Nested Queries. The example is to nest the following 
+   three queries.
+   
+   - find the first 500 vertices
+   
+   - find 1000 edges with index [1..1000]
+   
+   - find the 3-level Ego Network of "Toy Story (1995)", with maximally 3600 vertices output
+  
+  [![Connect to Graph Database](http://img.youtube.com/vi/5fPtZJqpfjA/0.jpg)](https://www.youtube.com/watch?v=5fPtZJqpfjA)
+  
+  
+### Query Example
+
+ Please see the result of an example Vertex-Oriented Query as follows. It is to firstly find for users who rated "Toy Story (1995)" as score 5, what are other movies they also rated score 5. Then output the top 30 such movies. Movies are colored by their genre.
+  
+ ![Vertex Query Example](./modules/DesktopConnection/src/main/resources/org/gephi/desktop/connection/resources/Query_Example.png?raw=true "Vertex Query Example")
+
+  
+### Gephi Tutorial
+
+ Since Gephi-Tinkerpop is based on Gephi project. You will find Gephi tutorials be very 
+ useful on graph layout and many other things.
+ Get started with the [Gephi Quick Start](http://gephi.org/users/quick-start/) and follow the 
+ [Tutorials](http://gephi.org/users/). Load a sample [dataset](https://wiki.gephi.org/index.php?title=Datasets) and start to play with the data.
+
 
 ## License
 
-Gephi main source code is distributed under the dual license [CDDL 1.0](http://www.opensource.org/licenses/CDDL-1.0) and [GNU General Public License v3](http://www.gnu.org/licenses/gpl.html). Read the [Legal FAQs](https://gephi.org/about/legal/faq/)  to learn more.
+Same as Gephi main source code, this work is distributed under the dual license [CDDL 1.0]
+(http://www.opensource.org/licenses/CDDL-1.0) and [GNU General Public License v3](http://www.gnu.org/licenses/gpl.html). Read the [Legal FAQs](https://gephi.org/about/legal/faq/)  to learn more.
 
 Copyright 2011 Gephi Consortium. All rights reserved.
 
